--- a/src/index.css
+++ b/src/index.css
@@ -682,4 +682,18 @@ ul{
   font-weight: 600;
   font-family: sans-serif;
 }
+.title1-blueocean{
+  color: #f98d00;
+  font-size: 35px;
+  font-weight: 600;
+  font-family: 'Righteous', cursive;
+
+}
+.title-blueocean{
+  color: #f98d00;
+  font-size: 30px;
+  font-weight: 600;
+  font-family: 'Righteous', cursive;
+
+}
 }
