--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-
+.App {
+  text-align: center;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -9,466 +11,16 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-.bg-intro2{
-  background-color: #cc5577;
-background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 100 60'%3E%3Cg %3E%3Crect fill='%23cc5577' width='11' height='11'/%3E%3Crect fill='%23ce5776' x='10' width='11' height='11'/%3E%3Crect fill='%23d05a76' y='10' width='11' height='11'/%3E%3Crect fill='%23d15c75' x='20' width='11' height='11'/%3E%3Crect fill='%23d35f74' x='10' y='10' width='11' height='11'/%3E%3Crect fill='%23d46174' y='20' width='11' height='11'/%3E%3Crect fill='%23d66473' x='30' width='11' height='11'/%3E%3Crect fill='%23d76673' x='20' y='10' width='11' height='11'/%3E%3Crect fill='%23d96972' x='10' y='20' width='11' height='11'/%3E%3Crect fill='%23da6c72' y='30' width='11' height='11'/%3E%3Crect fill='%23db6e71' x='40' width='11' height='11'/%3E%3Crect fill='%23dc7171' x='30' y='10' width='11' height='11'/%3E%3Crect fill='%23dd7471' x='20' y='20' width='11' height='11'/%3E%3Crect fill='%23de7671' x='10' y='30' width='11' height='11'/%3E%3Crect fill='%23df7971' y='40' width='11' height='11'/%3E%3Crect fill='%23e07c71' x='50' width='11' height='11'/%3E%3Crect fill='%23e17e71' x='40' y='10' width='11' height='11'/%3E%3Crect fill='%23e28171' x='30' y='20' width='11' height='11'/%3E%3Crect fill='%23e38471' x='20' y='30' width='11' height='11'/%3E%3Crect fill='%23e38771' x='10' y='40' width='11' height='11'/%3E%3Crect fill='%23e48972' y='50' width='11' height='11'/%3E%3Crect fill='%23e58c72' x='60' width='11' height='11'/%3E%3Crect fill='%23e58f73' x='50' y='10' width='11' height='11'/%3E%3Crect fill='%23e69173' x='40' y='20' width='11' height='11'/%3E%3Crect fill='%23e69474' x='30' y='30' width='11' height='11'/%3E%3Crect fill='%23e79775' x='20' y='40' width='11' height='11'/%3E%3Crect fill='%23e79a75' x='10' y='50' width='11' height='11'/%3E%3Crect fill='%23e89c76' x='70' width='11' height='11'/%3E%3Crect fill='%23e89f77' x='60' y='10' width='11' height='11'/%3E%3Crect fill='%23e8a278' x='50' y='20' width='11' height='11'/%3E%3Crect fill='%23e9a47a' x='40' y='30' width='11' height='11'/%3E%3Crect fill='%23e9a77b' x='30' y='40' width='11' height='11'/%3E%3Crect fill='%23e9aa7c' x='20' y='50' width='11' height='11'/%3E%3Crect fill='%23e9ac7e' x='80' width='11' height='11'/%3E%3Crect fill='%23eaaf7f' x='70' y='10' width='11' height='11'/%3E%3Crect fill='%23eab281' x='60' y='20' width='11' height='11'/%3E%3Crect fill='%23eab482' x='50' y='30' width='11' height='11'/%3E%3Crect fill='%23eab784' x='40' y='40' width='11' height='11'/%3E%3Crect fill='%23eaba86' x='30' y='50' width='11' height='11'/%3E%3Crect fill='%23ebbc88' x='90' width='11' height='11'/%3E%3Crect fill='%23ebbf8a' x='80' y='10' width='11' height='11'/%3E%3Crect fill='%23ebc18c' x='70' y='20' width='11' height='11'/%3E%3Crect fill='%23ebc48e' x='60' y='30' width='11' height='11'/%3E%3Crect fill='%23ebc790' x='50' y='40' width='11' height='11'/%3E%3Crect fill='%23ebc992' x='40' y='50' width='11' height='11'/%3E%3Crect fill='%23ebcc94' x='90' y='10' width='11' height='11'/%3E%3Crect fill='%23ebce97' x='80' y='20' width='11' height='11'/%3E%3Crect fill='%23ebd199' x='70' y='30' width='11' height='11'/%3E%3Crect fill='%23ecd39c' x='60' y='40' width='11' height='11'/%3E%3Crect fill='%23ecd69e' x='50' y='50' width='11' height='11'/%3E%3Crect fill='%23ecd8a1' x='90' y='20' width='11' height='11'/%3E%3Crect fill='%23ecdba4' x='80' y='30' width='11' height='11'/%3E%3Crect fill='%23ecdda6' x='70' y='40' width='11' height='11'/%3E%3Crect fill='%23ece0a9' x='60' y='50' width='11' height='11'/%3E%3Crect fill='%23ede2ac' x='90' y='30' width='11' height='11'/%3E%3Crect fill='%23ede4af' x='80' y='40' width='11' height='11'/%3E%3Crect fill='%23ede7b2' x='70' y='50' width='11' height='11'/%3E%3Crect fill='%23ede9b5' x='90' y='40' width='11' height='11'/%3E%3Crect fill='%23eeecb8' x='80' y='50' width='11' height='11'/%3E%3Crect fill='%23EEB' x='90' y='50' width='11' height='11'/%3E%3C/g%3E%3C/svg%3E");
-background-attachment: fixed;
-background-size: cover;
-}
-.title-home{
-  font-size: 40px;
-  font-weight: 600;
-  color: #656565;
-  font-family: 'Righteous', cursive;
-  margin: 1em 0em 2em 0em;
-
-}
-.titulo-intro {
-  font-size: 60px;
-  line-height: 55px;
-  line-height: 5.5rem;
-  font-weight: 600;
-  color: #404040;
-  font-family: 'Righteous', cursive;
-}
-.sub-intro{
-  font-size: 35px;
-  line-height: 55px;
-  line-height: 5.5rem;
-  font-weight: 600;
-  color: #404040;
-  font-family: 'Righteous', cursive;
-}
-.bg-in{
-  background-color: rgb(255, 248, 240);
-  border-radius: 10px 100px / 120px;
-}
-.bg-pastilla{
-  border-radius: 30px;
-  border-color: aquamarine !important;
- 
-}
-.bg-aboutme{
-  background-color: rgb(248, 222, 90);
-}
 nav{
   background-color: rgb(52, 110, 91);
 }
-footer{
-  background-color: #ff9d00;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='69.9' stroke-opacity='0.03' %3E%3Ccircle fill='%23ff9d00' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23fb8d17' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%23f47d24' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%23ed6e2d' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23e35f34' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23d85239' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%23cc453e' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%23be3941' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%23b02f43' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23a02644' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23901e44' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23801843' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%236f1341' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%235e0f3d' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%234e0c38' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%233e0933' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%232e062c' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%23210024' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
-  background-attachment: fixed;
-  background-size: cover;
-}
-.ft-title{
-  font-size: 35px;
-  font-weight: 600;
-  color: #ffffff;
-  font-family: 'Righteous', cursive;
-}
-.card-icon{
-  height: 90px;
-  width: 90px;
-  margin-left: 40%;
-  border-radius: 15px;
-  background-color: rgb(255, 255, 255);
-}
-.sk-icon{
-  height: 75px;
-  width: 75px;
-}
-.bg-pastillas{
-  background-color: rgb(255, 248, 240);
-}
-.sub-pasti{
-  font-size: 25px;
-  font-weight: 500;
-  color: #393939;
-  font-family: 'Righteous', cursive;
-}
-.miniatura{
-  border-radius: 30px;
-}
-.miniatura-pic{
-  border-radius: 30px;
-}
-.titulo-home {
-  font-size: 45px;
-  line-height: 55px;
-  line-height: 5.5rem;
-  font-weight: 600;
-  text-align: left;
-  color: #38b2e7;
-  font-family: 'Righteous', cursive;
-}
-.p-home {    
-  font-size: 18px;
-  line-height: 30px;
-  color: #4B5D72;
-  font-family: sans-serif;
-}
 
-.anuncio {
-  background: #242828;
-  background-image: url('pics/tramita.png');
-  border-radius: 10px;
-  max-width: 1200px;
-  margin: 0 auto;
-  align-items: center;
-  padding: 34px 40px;
-  height: 127px;
-}
-.anunciop {
-color: white;
-font-family: 'Harmonia';
-font-size: 20px;
-}/*
-.logo2 {
-  width: 180px;
-}*/
-.wallet-h .wallet-li::before {
-  content: "";
-  position: absolute;
-  width: 10px;
-  left: 0;
-  top: 13px;
-  height: 2px;
-  background-color: #f6a53a;
-}
-.wallet-li {
-  padding-left: 20px;
-  margin-bottom: 18px;
-  position: relative;
-  font-size: large;
-  font-family: sans-serif;
-  color: #929FAD;
-}
-.h2-h {
-  margin-bottom: 30px;
-  font-family: sans-serif;
-  color: #38b2e7;
-}
-.div-h {
-  margin-bottom: 20px;
-}
 ul{
     list-style-type: none;
 }
-.bg-video{
-  background-image: url('../src/pics/tramita.png');
-}
 
-.titulo-tesis{
-  font-size: 45px;
-  font-weight: 600;
-  color: #38b2e7;
-  font-family: 'Righteous', cursive;
-
-}
-
-.bg-pasti-blue{
-  background-color: #feeeda;
-  border-radius: 20px;
-}
-.bi-check2-circle{
-  color:#f98d00;
-  margin-right: 1em;
-}
-.title1-blueocean{
-  color: #f98d00;
-  font-size: 45px;
-  font-weight: 600;
-  font-family: 'Righteous', cursive;
-
-}
-.title-blueocean{
-  color: #f98d00;
-  font-size: 35px;
-  font-weight: 600;
-  font-family: 'Righteous', cursive;
-
-}
-.texto-blue{
-  color: #5d5c5c;
-  font-size: 20px;
-  font-weight: 600;
-  font-family: sans-serif; 
-}
-.btn-blueocean{
-  background-color: #f98d00;
-}
-.li-blueocean{
-  padding-left: 20px;
-  margin-bottom: 18px;
-  position: relative;
-  font-size: large;
-  font-family: sans-serif;
-  color: #7e8995;
-}
-
-.bg-pasti-kyber{
-  background-color: #202020;
-  border-radius: 20px;
-}
-.card-icon-kyber{
-  height: 95px;
-  width: 95px;
-  margin: 10px 10px ;
-  border-radius: 5px;
-  background-color: rgb(255, 255, 255);
-}
-.sk-icon-kyber{
-  height: 60px;
-  width: 60px; 
-}
-.li-kyber{
-  padding-left: 20px;
-  margin-bottom: 18px;
-  position: relative;
-  font-size: large;
-  font-family: sans-serif;
-  color: #7e8995;
-}
-.title-kyber{
-  color: #373737;
-  font-size: 35px;
-  font-weight: 600;
-  font-family: 'Righteous', cursive;
-
-}
-.title1-kyber{
-  color: #373737;
-  font-size: 45px;
-  font-weight: 600;
-  font-family: 'Righteous', cursive;
-
-}
-.texto-kyber{
-  color: #ffffff;
-  font-size: 20px;
-  font-weight: 500;
-  font-family: sans-serif;
-}
-
-.bi-pie-chart{
-  color: #0577a9;
-  font-size: 2rem;
-}
-.bi-activity{
-  color: #0577a9;
-  font-size: 2rem;
-}
-.bi-book{
-  color: #0577a9;
-  font-size: 2rem;
-}
-.bi-journal-text{
-  color: #0577a9;
-  font-size: 2rem;
-}
-.bi-newspaper{
-  color: #0577a9;
-  font-size: 2rem;
-}
-.bi-currency-bitcoin{
-  color: #0577a9;
-  font-size: 2rem;
-}
-.bi-bank{
-  color: #0577a9;
-  font-size: 2rem;
-}
-.title1-thorkey{
-  color: #ae7212;
-  font-size: 45px;
-  font-weight: 600;
-  font-family: 'Righteous', cursive;
-}
-.bg-pasti-thorkey{
-  background-color: #ac7c2e ;
-  border-radius: 20px;
-
-}
-.card-icon-thorkey{
-  height: 95px;
-  width: 95px;
-  border-radius: 10px;
-  margin: 0em 2em ;
-  background-color: rgb(255, 255, 255);
-}
-.texto-thorkey{
-  color: #ffffff;
-  font-size: 20px;
-  font-weight: 600;
-  font-family: sans-serif;
-}
 .card{
   border-radius: 25% 10%;
-}
-.p-thorkey{
-  color:rgb(70, 70, 70);
-  font-size: 16px;
-  font-weight: 600;
-  font-family: sans-serif;
-}
-.p2-thorkey{
-  color:rgb(70, 70, 70);
-  font-size: 18px;
-  font-weight: 500;
-  font-family: sans-serif;
-}
-.thorkey-li {
-  padding-left: 20px;
-  margin-bottom: 18px;
-  position: relative;
-  font-size: large;
-  font-family: sans-serif;
-  color: #7e8995;
-}
-.bi-globe{   
-  color: #ac7c2e;
-  font-size: 2rem;}
-.bi-wordpress{
-    color: #ac7c2e;
-  font-size: 2rem;
-}
-.bi-brush{
-    color: #ac7c2e;
-  font-size: 2rem;
-}
-.bi-plugin{
-    color: #ac7c2e;
-  font-size: 2rem;
-}
-.bi-pc-display-horizontal{
-    color: #ac7c2e;
-  font-size: 2rem;
-}
-.bi-cart{
-    color: #ac7c2e;
-  font-size: 2rem;
-}
-.bi-lock{
-    color: #ac7c2e;
-  font-size: 2rem;
-}
-.bi-columns{
-  color: #e4910b;
-  font-size: 2rem;
-}
-.bi-sd-card{
-  color: #e4910b;
-  font-size: 2rem;
-}
-.bi-code{
-  color: #e4910b;
-  font-size: 2rem;
-}
-.bi-window-sidebar{
-  color: #e4910b;
-  font-size: 2rem;
-}
-.bi-file-earmark-text{
-  color: #e4910b;
-  font-size: 2rem;
-}
-.bi-cloud-download{
-  color: #e4910b;
-  font-size: 2rem;
-}
-.bi-pencil-square{
-  color: #e4910b;
-  font-size: 2rem;
-}
-.bi-filetype-sql{
-  color: #494949;
-  font-size: 2rem;
-}
-.bi-database{
-  color: #494949;
-  font-size: 2rem;  
-}
-.bi-braces{
-  color: #494949;
-  font-size: 2rem;  
-}
-.bi-cloud-check{
-  color: #494949;
-  font-size: 2rem;  
-}
-.bi-cart-check{
-    color: #494949;
-  font-size: 2rem;
-}
-.bi-person-check{
-    color: #494949;
-  font-size: 2rem;
-}
-.bi-box-arrow-in-left{
-    color: #494949;
-  font-size: 2rem;
-}
-.bi-person-vcard{
-    color: #494949;
-  font-size: 2rem;
-}
-.bi-patch-check{
-    color: #494949;
-  font-size: 2rem;
-}
-.bi-person-workspace{
-    color: #494949;
-  font-size: 2rem;
-}
-.bi-exclamation-triangle{
-    color: #494949;
-  font-size: 2rem;
-}
-.bi-cloud-upload{
-    color: #494949;
-  font-size: 2rem;
-}
-.bi-database-check{
-  color: #494949;
-  font-size: 2rem;
-}
-.bi-columns-gap{
-  color: #494949;
-  font-size: 2rem; 
-}
-.bi-whatsapp{
-  color: #ffffff;
-  font-size: 2rem; 
-}
-.bi-linkedin{
-  color: #ffffff;
-  font-size: 2rem; 
-}
-.bi-envelope{
-  color: #ffffff;
-  font-size: 2rem; 
-}
-.bi-github{
-  color: #ffffff;
-  font-size: 2rem; 
-}
-.p-about {    
-  font-size: 18px;
-  line-height: 28px;
-  color: #4B5D72;
-  font-family: sans-serif;
-}
-.p-footer{
-  font-size: 20px;
-  font-weight: 600;
-  color: #ffffff;
-  font-family: sans-serif;
-}
-.p-proyecto {    
-  font-size: 18px;
-  line-height: 28px;
-  color: #4B5D72;
-  font-family: sans-serif;
 }
 
 .btn-wsp{
@@ -488,325 +40,4 @@ ul{
   z-index: 100;
 }
 
-.bi-check{
-  color: #bb0497;
-  font-size: 2rem;
-}
-.border-thorkey{
-  border: 1px solid rgba(153, 111, 57, 0.407);
-  border-radius: 30px;
-}
-.border-kyber{
-  border-radius: 30px;
-}
-.walletfy-icon{
-  width: 25%;
-}
-.avatar-perfil{
-  width: 25% !important;
-}
-.avatar-about{
-  width: 50% !important;
-}
-.avatar-proyecto{
-  width: 75% !important;
-}
-.img-analisis{
-  width: 75%;
-}
-.wallet-li-h3{
-  font-size: 24px;
-}
-.titulo-bsz{
-  color: rgb(13, 109, 31) !important;
-  font-size: 40px;
-  line-height: 55px;
-  font-weight: 600;
-  font-family: 'Righteous', cursive;
-}
-.bg-pasti-bsz{
-  background-color: rgb(20, 65, 29) ;
-  border-radius: 20px;
-}
-.bsz-icons{
-  font-size: 30px;
-  color: rgb(13, 109, 31);
-}
-.title1-bsz{
-  color: rgb(13, 109, 31);
-  font-size: 40px;
-  line-height: 55px;
-  font-weight: 600;
-  font-family: 'Righteous', cursive;
-}
-.sk-icon-bsz{
-  height: 75px;
-  width: 75px;
-}
-.card-icon-bsz{
-  height: 95px;
-  width: 95px;
-  border-radius: 10px;
-  margin: 0px 10px ;
-  background-color: rgb(255, 255, 255);
-}
-/* Breakpoint  formato pc, arriba de los 991px*/
-@media screen and (max-width: 992px) {
-  .titulo-intro {
-    font-size: 45px;
-    line-height: 55px;
-    font-weight: 600;
-    color: #323232;
-    font-family: 'Righteous', cursive;
-    margin-top: 1em;
-  }
-  .sub-intro{
-    font-size: 35px;
-    line-height: 55px;
-    font-weight: 600;
-    color: #404040;
-    margin-top: 1em;
-    font-family: 'Righteous', cursive;
-  }
-  .card-icon{
-    height: 90px;
-    width: 90px;
-    margin-left: 0%;
-    border-radius: 15px;
-    background-color: rgb(255, 255, 255);
-  }
-  .img-thorkey{
-    width: 75% !important;
-  }
-  .avatar-perfil{
-    width: 40% !important;
-  }
-  .avatar-about{
-    width: 50% !important;
-  }
-  .avatar-proyecto{
-    width: 40% !important;
-  }
-  .walletfy-icon{
-    width: 50%;
-  }
-  .wallet-li {
-    margin-bottom: 18px;
-    position: relative;
-    font-family: sans-serif;
-    color: #929FAD;
-  }
-  .wallet-li-h3{
-    font-size: 18px;
-  }
-  .img-analisis{
-    width: 75%;
-  }
-  .sk-icon-bsz{
-    height: 75px;
-    width: 75px;
-  }
-  .card-icon-bsz{
-    height: 95px;
-    width: 95px;
-    border-radius: 10px;
-    margin: 0px 10px ;
-    background-color: rgb(255, 255, 255);
-  }
-  .card-icon-thorkey{
-    height: 95px;
-    width: 95px;
-    border-radius: 10px;
-    margin: 0em 2em ;
-    background-color: rgb(255, 255, 255);
-  }
-  .card-icon-kyber{
-  height: 95px;
-  width: 120px;
-  margin: 10px 10px ;
-  border-radius: 10px;
-  background-color: rgb(255, 255, 255);
-}
-  .sk-icon-kyber{
-    height: 60px;
-    width: 60px; 
-  }
 
-}
-
-/* Breakpoint formato tablet*/
-@media screen and (max-width: 768px) {
-  .titulo-intro {
-    font-size: 40px;
-    line-height: 55px;
-    font-weight: 600;
-    color: #323232;
-    font-family: 'Righteous', cursive;
-    margin-top: 1em;
-  }
-  .sub-intro{
-    font-size: 30px;
-    line-height: 55px;
-    font-weight: 600;
-    color: #404040;
-    margin-top: 1em;
-    font-family: 'Righteous', cursive;
-  }
-  .title-home{
-    font-size: 30px;
-    font-weight: 600;
-    color: #656565;
-    font-family: 'Righteous', cursive;
-    margin: 3em 0 2em 0;
-  }
-  .card-icon{
-    height: 90px;
-    width: 90px;
-    margin-left: 0%;
-    border-radius: 15px;
-    background-color: rgb(255, 255, 255);
-  }
-  .img-analisis{
-    margin: 2em 0em 4em 0em; /*top-left-bottom-right*/
-  }
-  .walletfy-icon{
-    width: 75%;
-  }
-  .wallet-li {
-    padding-left: 0px;
-    margin-bottom: 18px;
-    position: relative;
-    font-family: sans-serif;
-    color: #929FAD;
-  }
-  .wallet-li-h3{
-    font-size: 18px;
-  }
-  .img-thorkey{
-    width: 100% !important;
-  }
-  .avatar-perfil{
-    width: 50% !important;
-  }
-  .avatar-about{
-    width: 75% !important;
-  }
-  .avatar-proyecto{
-    width: 75% !important;
-  }
-  .border-thorkey{
-    border: 1px solid rgba(146, 85, 5, 0.523)
-  }
-  .border-kyber{
-    border: 1px solid rgba(124, 124, 124, 0.523)
-  }
-  .social-icon{
-    margin: 0em 1em 0em 1em;
-  }
-  .titulo-home {
-    font-size: 35px;
-    line-height: 3rem;
-    font-weight: 600;
-    color: #38b2e7;
-    font-family: 'Righteous', cursive;
-    margin-bottom: 1em;
-  }
-  .p-home {    
-    font-size: 18px;
-    line-height: 30px;
-    margin-top: 1em;
-    margin-bottom: 1em;
-    color: #4B5D72;
-    font-family: sans-serif;
-  }
-  .mockup-walletfy{
-    display: none;
-  }
-  
-.titulo-tesis{
-  font-size: 35px;
-  font-weight: 600;
-  color: #38b2e7;
-  font-family: 'Righteous', cursive;
-}
-.li-kyber{
-  padding-left: 10px;
-  margin-bottom: 18px;
-  position: relative;
-  font-size: large;
-  font-family: sans-serif;
-  color: #7e8995;
-}
-
-.title1-thorkey{
-  color: #ae7212;
-  font-size: 35px;
-  font-weight: 600;
-  font-family: 'Righteous', cursive;
-  margin-bottom: 1em;
-}
-.p-thorkey{
-  color:rgb(70, 70, 70);
-  font-size: 16px;
-  font-weight: 600;
-  font-family: sans-serif;
-}
-.title1-blueocean{
-  color: #f98d00;
-  font-size: 35px;
-  font-weight: 600;
-  font-family: 'Righteous', cursive;
-
-}
-.title-blueocean{
-  color: #f98d00;
-  font-size: 30px;
-  font-weight: 600;
-  font-family: 'Righteous', cursive;
-}
-.sk-icon-bsz{
-  height: 75px;
-  width: 75px;
-}
-.card-icon-bsz{
-  height: 95px;
-  width: 95px;
-  border-radius: 10px;
-  margin: 0px 10px ;
-  background-color: rgb(255, 255, 255);
-}
-.card-icon-thorkey{
-  height: 95px;
-  width: 95px;
-  border-radius: 10px;
-  margin: 0px 10px ;
-  background-color: rgb(255, 255, 255);
-}
-.card-icon-kyber{
-  height: 95px;
-  width: 120px;
-  margin: 10px 50px ;
-  border-radius: 5px;
-  background-color: rgb(255, 255, 255);
-}
-.sk-icon-kyber{
-  height: 50px;
-  width: 50px; 
-}
-}
-
-/* Breakpoint formato tablet*/
-@media screen and (max-width: 576px) {
-  .card-icon-kyber{
-    height: 95px;
-    width: 120px;
-    margin: 10px 10px ;
-    border-radius: 5px;
-    background-color: rgb(255, 255, 255);
-  }
-  .sk-icon-kyber{
-    height: 50px;
-    width: 50px; 
-  }
-
-}
