--- a/src/styles/bszStore.css
+++ b/src/styles/bszStore.css
@@ -10,8 +10,8 @@
     background-color: rgb(20, 65, 29) ;
     border-radius: 20px;
   }
-  .bsz-icons{
-    font-size: 30px;
+  .li-bsz-icons{
+    font-size: 2rem;
     color: rgb(13, 109, 31);
   }  
   .card-icon-bsz{
