--- a/src/styles/thorkey.css
+++ b/src/styles/thorkey.css
@@ -1,20 +1,3 @@
-
-.btn-wsp{
-    background: #9d037e;
-    border-radius: 50px;
-    bottom: 25px;
-    box-shadow: 0 1px 10px rgba(0,0,0,.3);
-    color: #fff;
-    font-size: 40px;
-    height: 60px;
-    line-height: 58px;
-    position: fixed;
-    right: 25px;
-    text-align: center;
-    transition: all .3s ease;
-    width: 60px;
-    z-index: 100;
-  }
 .title1-thorkey{
     color: #ae7212;
     font-size: 45px;
@@ -40,6 +23,9 @@
     font-weight: 600;
     font-family: sans-serif;
 }
+.card{
+  border-radius: 25% 10%;
+}
 .p-thorkey{
     color:rgb(70, 70, 70);
     font-size: 16px;
@@ -58,33 +44,10 @@
     font-family: sans-serif;
     color: #7e8995;
   }
-  .bi-globe{   
+  .li-thorkey-icons{   
     color: #ac7c2e;
     font-size: 2rem;}
-  .bi-wordpress{
-      color: #ac7c2e;
-    font-size: 2rem;
-  }
-  .bi-brush{
-      color: #ac7c2e;
-    font-size: 2rem;
-  }
-  .bi-plugin{
-      color: #ac7c2e;
-    font-size: 2rem;
-  }
-  .bi-pc-display-horizontal{
-      color: #ac7c2e;
-    font-size: 2rem;
-  }
-  .bi-cart{
-      color: #ac7c2e;
-    font-size: 2rem;
-  }
-  .bi-lock{
-      color: #ac7c2e;
-    font-size: 2rem;
-  }
+  
 
 /* Breakpoint  formato pc, arriba de los 991px*/
 @media screen and (max-width: 992px) {
