--- a/src/styles/walletfy.css
+++ b/src/styles/walletfy.css
@@ -1,7 +1,7 @@
 .walletfy-icon{
     width: 25%;
-  }
-  .anuncio {
+}
+.anuncio {
     background: #242828;
     background-image: url('../pics/tramita.png');
     border-radius: 10px;
@@ -10,17 +10,17 @@
     align-items: center;
     padding: 34px 40px;
     height: 127px;
-  }
-  .anunciop {
+}
+.anunciop {
   color: white;
   font-family: 'Harmonia';
   font-size: 20px;
-  }
+}
 
-  .bg-video{
+.bg-video{
     background-image: url('../pics/tramita.png');
-  }
-  .titulo-home {
+}
+.titulo-home {
     font-size: 45px;
     line-height: 55px;
     line-height: 5.5rem;
@@ -28,72 +28,53 @@
     text-align: left;
     color: #38b2e7;
     font-family: 'Righteous', cursive;
-  }
-  .titulo-tesis{
+}
+.titulo-tesis{
     font-size: 45px;
     font-weight: 600;
     color: #38b2e7;
     font-family: 'Righteous', cursive;
   
-  }
-  .img-analisis{
+}
+.img-analisis{
     width: 75%;
-  }
-  
+}
+.wallet-li {
+    padding-left: 20px;
+    margin-bottom: 18px;
+    position: relative;
+    font-size: large;
+    font-family: sans-serif;
+    color: #929FAD;
+}
 .wallet-li-h3{
     font-size: 24px;
-  }
-
-
-  .bi-pie-chart{
+}
+.li-walletfy-icons{
     color: #0577a9;
     font-size: 2rem;
-  }
-  .bi-activity{
-    color: #0577a9;
-    font-size: 2rem;
-  }
-  .bi-book{
-    color: #0577a9;
-    font-size: 2rem;
-  }
-  .bi-journal-text{
-    color: #0577a9;
-    font-size: 2rem;
-  }
-  .bi-newspaper{
-    color: #0577a9;
-    font-size: 2rem;
-  }
-  .bi-currency-bitcoin{
-    color: #0577a9;
-    font-size: 2rem;
-  }
-  .bi-bank{
-    color: #0577a9;
-    font-size: 2rem;
-  }
+}
 
   /* Breakpoint  formato pc, arriba de los 991px*/
 @media screen and (max-width: 992px) {
   .mockup-walletfy{
     display: none;
   }
-    .walletfy-icon{
+  .walletfy-icon{
         width: 50%;
-      }
-      .wallet-li {
+  }
+  .wallet-li {
         margin-bottom: 18px;
         position: relative;
         font-family: sans-serif;
         color: #929FAD;
-      }
-      .wallet-li-h3{
+  }
+  .wallet-li-h3{
         font-size: 18px;
-      }
-      .img-analisis{
+  }
+  .img-analisis{
         width: 75%;
-      }
+  }
 
 }
 
