--- a/src/styles/component/_footer.scss
+++ b/src/styles/component/_footer.scss
@@ -9,13 +9,11 @@ footer{
     font-size: 35px;
     font-weight: 600;
     color: #ffffff;
-    font-family: 'Righteous', cursive;
   }
   .p-footer{
     font-size: 20px;
     font-weight: 600;
     color: #ffffff;
-    font-family: sans-serif;
   }
 
   .bi-whatsapp{
@@ -40,6 +38,10 @@ footer{
 
     .social-icon{
       margin: 0em 1em 0em 1em;
+    }
+    .p-footer{
+      font-size: 20px;
+      font-weight: 500;
     }
   
   }
