--- a/src/styles/component/_experience.scss
+++ b/src/styles/component/_experience.scss
@@ -1,10 +1,20 @@
 .avatar-proyecto{
     width: 75% !important;
   }
-.bi-check{
-    color: #bb0497;
-    font-size: 2rem;
-  }
+.experience-li{
+  @extend .project-funtionalities;
+    p{
+      font-size: 22px;
+      font-weight: 600;
+      margin: 0.5em 0;
+      color: #818181;
+    }
+    .bi-check{
+      color: #bb0497;
+      font-size: 2.5rem;
+    }
+}
+
 
 /* Breakpoint  formato pc, arriba de los 991px*/
 @media screen and (max-width: 992px) {
