Implemented translation feature and made progress on portfolio translation

--- a/src/styles/component/styles.scss
+++ b/src/styles/component/styles.scss
@@ -8,6 +8,7 @@
 @import './projects';
 @import './experience';
 @import './footer';
+@import './navbar';
 @import './blueocean';
 @import './bszStore';
 @import './kyber';
