--- a/src/styles/component/_walletfy.scss
+++ b/src/styles/component/_walletfy.scss
@@ -1,6 +1,13 @@
 .walletfy-icon{
     width: 25%;
 }
+.btn-landing{
+  background-color: #fff;
+  color: #38b2e7;
+  border-color: #38b2e7;
+  text-decoration: none;
+  
+}
 .anuncio {
     background: #242828;
     background-image: url('../../pics/tramita.png');
