--- a/src/styles/component/_walletfy.scss
+++ b/src/styles/component/_walletfy.scss
@@ -22,6 +22,7 @@
       }
 }
 .bg-video{
+    background-color: var(--walletfy-bg-video);
     background-image: url('../../pics/tramita.png');
 }
 .titulo-home {
@@ -49,6 +50,7 @@
       color: #0577a9;
       font-size: 2rem;
       }
+
 }
 
 
