--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -5,11 +5,46 @@
 //Variables
 $title-font-family: 'Righteous', cursive;
 $p-font-family: 'Poppins', sans-serif;
-$p-font-color: #656565;
+
+//Dark mode changes
+:root {
+    --body-background: #fafafa;
+    --intro-font-color: #404040;
+    --p-font-color: #656565;
+    --experience-li-p: #818181;
+    --bg-color-intro: #bc4f6e;
+    --bg-image-intro: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 100 60'%3E%3Cg %3E%3Crect fill='%23cc5577' width='11' height='11'/%3E%3Crect fill='%23ce5776' x='10' width='11' height='11'/%3E%3Crect fill='%23d05a76' y='10' width='11' height='11'/%3E%3Crect fill='%23d15c75' x='20' width='11' height='11'/%3E%3Crect fill='%23d35f74' x='10' y='10' width='11' height='11'/%3E%3Crect fill='%23d46174' y='20' width='11' height='11'/%3E%3Crect fill='%23d66473' x='30' width='11' height='11'/%3E%3Crect fill='%23d76673' x='20' y='10' width='11' height='11'/%3E%3Crect fill='%23d96972' x='10' y='20' width='11' height='11'/%3E%3Crect fill='%23da6c72' y='30' width='11' height='11'/%3E%3Crect fill='%23db6e71' x='40' width='11' height='11'/%3E%3Crect fill='%23dc7171' x='30' y='10' width='11' height='11'/%3E%3Crect fill='%23dd7471' x='20' y='20' width='11' height='11'/%3E%3Crect fill='%23de7671' x='10' y='30' width='11' height='11'/%3E%3Crect fill='%23df7971' y='40' width='11' height='11'/%3E%3Crect fill='%23e07c71' x='50' width='11' height='11'/%3E%3Crect fill='%23e17e71' x='40' y='10' width='11' height='11'/%3E%3Crect fill='%23e28171' x='30' y='20' width='11' height='11'/%3E%3Crect fill='%23e38471' x='20' y='30' width='11' height='11'/%3E%3Crect fill='%23e38771' x='10' y='40' width='11' height='11'/%3E%3Crect fill='%23e48972' y='50' width='11' height='11'/%3E%3Crect fill='%23e58c72' x='60' width='11' height='11'/%3E%3Crect fill='%23e58f73' x='50' y='10' width='11' height='11'/%3E%3Crect fill='%23e69173' x='40' y='20' width='11' height='11'/%3E%3Crect fill='%23e69474' x='30' y='30' width='11' height='11'/%3E%3Crect fill='%23e79775' x='20' y='40' width='11' height='11'/%3E%3Crect fill='%23e79a75' x='10' y='50' width='11' height='11'/%3E%3Crect fill='%23e89c76' x='70' width='11' height='11'/%3E%3Crect fill='%23e89f77' x='60' y='10' width='11' height='11'/%3E%3Crect fill='%23e8a278' x='50' y='20' width='11' height='11'/%3E%3Crect fill='%23e9a47a' x='40' y='30' width='11' height='11'/%3E%3Crect fill='%23e9a77b' x='30' y='40' width='11' height='11'/%3E%3Crect fill='%23e9aa7c' x='20' y='50' width='11' height='11'/%3E%3Crect fill='%23e9ac7e' x='80' width='11' height='11'/%3E%3Crect fill='%23eaaf7f' x='70' y='10' width='11' height='11'/%3E%3Crect fill='%23eab281' x='60' y='20' width='11' height='11'/%3E%3Crect fill='%23eab482' x='50' y='30' width='11' height='11'/%3E%3Crect fill='%23eab784' x='40' y='40' width='11' height='11'/%3E%3Crect fill='%23eaba86' x='30' y='50' width='11' height='11'/%3E%3Crect fill='%23ebbc88' x='90' width='11' height='11'/%3E%3Crect fill='%23ebbf8a' x='80' y='10' width='11' height='11'/%3E%3Crect fill='%23ebc18c' x='70' y='20' width='11' height='11'/%3E%3Crect fill='%23ebc48e' x='60' y='30' width='11' height='11'/%3E%3Crect fill='%23ebc790' x='50' y='40' width='11' height='11'/%3E%3Crect fill='%23ebc992' x='40' y='50' width='11' height='11'/%3E%3Crect fill='%23ebcc94' x='90' y='10' width='11' height='11'/%3E%3Crect fill='%23ebce97' x='80' y='20' width='11' height='11'/%3E%3Crect fill='%23ebd199' x='70' y='30' width='11' height='11'/%3E%3Crect fill='%23ecd39c' x='60' y='40' width='11' height='11'/%3E%3Crect fill='%23ecd69e' x='50' y='50' width='11' height='11'/%3E%3Crect fill='%23ecd8a1' x='90' y='20' width='11' height='11'/%3E%3Crect fill='%23ecdba4' x='80' y='30' width='11' height='11'/%3E%3Crect fill='%23ecdda6' x='70' y='40' width='11' height='11'/%3E%3Crect fill='%23ece0a9' x='60' y='50' width='11' height='11'/%3E%3Crect fill='%23ede2ac' x='90' y='30' width='11' height='11'/%3E%3Crect fill='%23ede4af' x='80' y='40' width='11' height='11'/%3E%3Crect fill='%23ede7b2' x='70' y='50' width='11' height='11'/%3E%3Crect fill='%23ede9b5' x='90' y='40' width='11' height='11'/%3E%3Crect fill='%23eeecb8' x='80' y='50' width='11' height='11'/%3E%3Crect fill='%23EEB' x='90' y='50' width='11' height='11'/%3E%3C/g%3E%3C/svg%3E");
+    --bg-color-footer: #ff9d00;
+    --bg-image-footer: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='69.9' stroke-opacity='0.03' %3E%3Ccircle fill='%23ff9d00' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23fb8d17' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%23f47d24' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%23ed6e2d' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23e35f34' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23d85239' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%23cc453e' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%23be3941' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%23b02f43' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23a02644' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23901e44' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23801843' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%236f1341' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%235e0f3d' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%234e0c38' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%233e0933' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%232e062c' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%23210024' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+    --bg-toggle-switch-lenguage: #73C0FC;
+    --bsz-font-color-green: #157347;
+    --walletfy-bg-video: #f5f5f5;
+    --kyber-font-color: #373737;
+    --kyber-icon-color: #494949;
+
+}
+
+[data-theme="dark"]{
+    --body-background: linear-gradient(to right, #0f0c29, #121625); 
+    --intro-font-color: #f3f3f3;
+    --p-font-color: #f3f3f3;
+    --experience-li-p: #e8e8e8;
+    --bg-color-intro: #542331;
+    --bg-image-intro: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 100 60'%3E%3Cg %3E%3Crect fill='%23542331' width='11' height='11'/%3E%3Crect fill='%23532331' x='10' width='11' height='11'/%3E%3Crect fill='%23522332' y='10' width='11' height='11'/%3E%3Crect fill='%23512332' x='20' width='11' height='11'/%3E%3Crect fill='%23502333' x='10' y='10' width='11' height='11'/%3E%3Crect fill='%234f2333' y='20' width='11' height='11'/%3E%3Crect fill='%234e2233' x='30' width='11' height='11'/%3E%3Crect fill='%234d2233' x='20' y='10' width='11' height='11'/%3E%3Crect fill='%234c2234' x='10' y='20' width='11' height='11'/%3E%3Crect fill='%234b2234' y='30' width='11' height='11'/%3E%3Crect fill='%234a2234' x='40' width='11' height='11'/%3E%3Crect fill='%23492234' x='30' y='10' width='11' height='11'/%3E%3Crect fill='%23482235' x='20' y='20' width='11' height='11'/%3E%3Crect fill='%23462235' x='10' y='30' width='11' height='11'/%3E%3Crect fill='%23452235' y='40' width='11' height='11'/%3E%3Crect fill='%23442235' x='50' width='11' height='11'/%3E%3Crect fill='%23432235' x='40' y='10' width='11' height='11'/%3E%3Crect fill='%23422235' x='30' y='20' width='11' height='11'/%3E%3Crect fill='%23412235' x='20' y='30' width='11' height='11'/%3E%3Crect fill='%23402235' x='10' y='40' width='11' height='11'/%3E%3Crect fill='%233f2235' y='50' width='11' height='11'/%3E%3Crect fill='%233e2235' x='60' width='11' height='11'/%3E%3Crect fill='%233c2235' x='50' y='10' width='11' height='11'/%3E%3Crect fill='%233b2235' x='40' y='20' width='11' height='11'/%3E%3Crect fill='%233a2235' x='30' y='30' width='11' height='11'/%3E%3Crect fill='%23392135' x='20' y='40' width='11' height='11'/%3E%3Crect fill='%23382135' x='10' y='50' width='11' height='11'/%3E%3Crect fill='%23372134' x='70' width='11' height='11'/%3E%3Crect fill='%23362134' x='60' y='10' width='11' height='11'/%3E%3Crect fill='%23352134' x='50' y='20' width='11' height='11'/%3E%3Crect fill='%23342134' x='40' y='30' width='11' height='11'/%3E%3Crect fill='%23322134' x='30' y='40' width='11' height='11'/%3E%3Crect fill='%23312133' x='20' y='50' width='11' height='11'/%3E%3Crect fill='%23302133' x='80' width='11' height='11'/%3E%3Crect fill='%232f2133' x='70' y='10' width='11' height='11'/%3E%3Crect fill='%232e2132' x='60' y='20' width='11' height='11'/%3E%3Crect fill='%232d2132' x='50' y='30' width='11' height='11'/%3E%3Crect fill='%232c2032' x='40' y='40' width='11' height='11'/%3E%3Crect fill='%232b2031' x='30' y='50' width='11' height='11'/%3E%3Crect fill='%232a2031' x='90' width='11' height='11'/%3E%3Crect fill='%23292030' x='80' y='10' width='11' height='11'/%3E%3Crect fill='%23282030' x='70' y='20' width='11' height='11'/%3E%3Crect fill='%2327202f' x='60' y='30' width='11' height='11'/%3E%3Crect fill='%2327202f' x='50' y='40' width='11' height='11'/%3E%3Crect fill='%23261f2e' x='40' y='50' width='11' height='11'/%3E%3Crect fill='%23251f2e' x='90' y='10' width='11' height='11'/%3E%3Crect fill='%23241f2d' x='80' y='20' width='11' height='11'/%3E%3Crect fill='%23231f2d' x='70' y='30' width='11' height='11'/%3E%3Crect fill='%23221f2c' x='60' y='40' width='11' height='11'/%3E%3Crect fill='%23221e2c' x='50' y='50' width='11' height='11'/%3E%3Crect fill='%23211e2b' x='90' y='20' width='11' height='11'/%3E%3Crect fill='%23201e2a' x='80' y='30' width='11' height='11'/%3E%3Crect fill='%231f1e2a' x='70' y='40' width='11' height='11'/%3E%3Crect fill='%231f1e29' x='60' y='50' width='11' height='11'/%3E%3Crect fill='%231e1d28' x='90' y='30' width='11' height='11'/%3E%3Crect fill='%231d1d28' x='80' y='40' width='11' height='11'/%3E%3Crect fill='%231d1d27' x='70' y='50' width='11' height='11'/%3E%3Crect fill='%231c1d26' x='90' y='40' width='11' height='11'/%3E%3Crect fill='%231c1c26' x='80' y='50' width='11' height='11'/%3E%3Crect fill='%231B1C25' x='90' y='50' width='11' height='11'/%3E%3C/g%3E%3C/svg%3E");
+    --bg-color-footer: #542331;
+    --bg-image-footer: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%23542331' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23512230' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%234d2130' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%234a212f' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%2347202e' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23431f2d' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%23401e2d' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%233d1e2c' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%23391d2b' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23361c2b' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23321b2a' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%232f1b29' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%232c1a29' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%23281928' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%23251827' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%23221826' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%231e1726' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%231B1625' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+    --bg-toggle-switch-lenguage: #183153;
+    --bsz-font-color-green: #2dc57e;
+    --walletfy-bg-video: #161818;
+    --kyber-font-color: #f3f3f3;
+    --kyber-icon-color: #bfc260;
+}
+
 
 //Basic Structure and Formatting Styles
 .App {
     text-align: center;
+    background:  var(--body-background);
 }
 body {
     margin: 0;
@@ -51,14 +86,14 @@ h1, h2, h3, h4{
 .title-home{
     font-size: 40px;
     font-weight: 600;
-    color: $p-font-color;
+    color: var(--p-font-color);
     margin: 1em 0em 2em 0em;
 }
 .project-description {    
     font-size: 18px;
     line-height: 30px;
     margin: 1em 0;
-    color: $p-font-color;
+    color: var(--p-font-color);
 }
 .project-tech-stack{
     font-size: 20px;
@@ -69,7 +104,7 @@ h1, h2, h3, h4{
     margin-bottom: 18px;
     position: relative;
     font-size: 18px;
-    color: $p-font-color; 
+    color: var(--p-font-color); 
 }
 
 
