--- a/src/styles/component/_experience.scss
+++ b/src/styles/component/_experience.scss
@@ -7,7 +7,7 @@
       font-size: 22px;
       font-weight: 600;
       margin: 0.5em 0;
-      color: #818181;
+      color: var(--experience-li-p);
     }
     .bi-check{
       color: #bb0497;
