Modularization of settings.scss file

--- a/src/styles/component/_experience.scss
+++ b/src/styles/component/_experience.scss
@@ -3,6 +3,7 @@
   }
 .experience-li{
   @extend .project-funtionalities;
+  border-radius: 5px;
     p{
       font-size: 22px;
       font-weight: 600;
