--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -1,7 +1,3 @@
-//Fonts imports
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
-
 //Variables
 $title-font-family: 'Righteous', cursive;
 $p-font-family: 'Poppins', sans-serif;
@@ -21,7 +17,10 @@ $p-font-family: 'Poppins', sans-serif;
     --walletfy-bg-video: #f5f5f5;
     --kyber-font-color: #373737;
     --kyber-icon-color: #494949;
-
+    --btn-thorkey-bg: #85611f;
+    --btn-thorkey-color: #ffffff;
+    --btn-kyber-bg: #f9f9f9;
+    --btn-kyber-color: #2d2d2d;
 }
 
 [data-theme="dark"]{
@@ -38,89 +37,8 @@ $p-font-family: 'Poppins', sans-serif;
     --walletfy-bg-video: #161818;
     --kyber-font-color: #f3f3f3;
     --kyber-icon-color: #bfc260;
-}
-
-
-//Basic Structure and Formatting Styles
-.App {
-    text-align: center;
-    background:  var(--body-background);
-}
-body {
-    margin: 0;
-}
-ul{
-    list-style-type: none;
-}
-p, a{
-    font-family: $p-font-family;
-}
-h1, h2, h3, h4{
-    font-family: $title-font-family;
-}
-.btn-wsp{
-  background: #9d037e;
-  border-radius: 50px;
-  bottom: 30px;
-  box-shadow: 0 1px 10px rgba(0,0,0,.3);
-  color: #fff;
-  font-size: 55px;
-  height: 60px;
-  line-height: 62px;
-  position: fixed;
-  right: 25px;
-  text-align: center;
-  transition: all .3s ease;
-  width: 60px;
-  z-index: 100;
-    :hover{
-        color: #fee2f9;
-    }
-    :focus{
-        color: #fee2f9;
-    }
-}
-
-  
-//Classes
-.title-home{
-    font-size: 40px;
-    font-weight: 600;
-    color: var(--p-font-color);
-    margin: 1em 0em 2em 0em;
-}
-.project-description {    
-    font-size: 18px;
-    line-height: 30px;
-    margin: 1em 0;
-    color: var(--p-font-color);
-}
-.project-tech-stack{
-    font-size: 20px;
-    font-weight: 600;
-}
-.project-funtionalities{
-    padding: 0 10px;
-    margin-bottom: 18px;
-    position: relative;
-    font-size: 18px;
-    color: var(--p-font-color); 
-}
-
-
-
-
-/* Breakpoint formato tablet*/
-@media screen and (max-width: 768px) {
-    ul{
-        padding: 0;
-    }
-    .title-home{
-        font-size: 30px;  
-        margin: 3em 0 2em 0;
-    }
-    .project-description {    
-        font-size: 16px;   
-        margin: 1em 0;
-    }
+    --btn-thorkey-bg: #85611f;
+    --btn-thorkey-color: #ffffff;
+    --btn-kyber-bg: #e5e5e5;
+    --btn-kyber-color: #2d2d2d;
 }
