--- a/src/styles/component/_kyber.scss
+++ b/src/styles/component/_kyber.scss
@@ -3,6 +3,18 @@
     font-size: 45px;
     font-weight: 600;
   }
+  .btn-kyber{
+    color: var(--btn-kyber-color);
+    background-color: var(--btn-kyber-bg);
+    text-decoration: none;
+    padding: 8px 20px;
+    border: 1px solid #2d2d2d;
+    border-radius: 7px;
+    &:hover{
+      color: #ffffff;
+      background-color: #2d2d2d;
+    }
+  }
 .bg-pasti-kyber{
     background-color: #202020;
     border-radius: 20px;
