--- a/src/styles/component/_pastillas.scss
+++ b/src/styles/component/_pastillas.scss
@@ -1,46 +1,139 @@
-.bg-pastilla{
-    border-radius: 30px;
-    border-color: aquamarine !important;
-  }
-  .bg-pastillas{
-    background-color: rgb(255, 248, 240);
-  }
-  .sub-pasti{
+.sub-pasti{
     font-size: 25px;
     font-weight: 500;
-    color: #393939;
-  }
-  .card-icon{
-    height: 90px;
-    width: 90px;
-    margin-left: 40%;
-    border-radius: 15px;
-    background-color: rgb(255, 255, 255);
-  }
-  .sk-icon{
-    height: 75px;
-    width: 75px;
+    color: var(--p-font-color)
   }
 
-  /* Breakpoint  formato pc, arriba de los 991px*/
-@media screen and (max-width: 992px) {
-    .card-icon{
-      height: 90px;
-      width: 90px;
-      margin-left: 0%;
-      border-radius: 15px;
-      background-color: rgb(255, 255, 255);
-    }
+/* Style the Un-order list by setting its list-style to none */
+.wrapper ul {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  vertical-align: middle;
+  justify-content: center;
+  margin: 1em 0 3em 0;
+}
 
+/* Style the list items inside the UL list, by setting its width, height and line-height and float them to left and set its border and border-radius.
+ */
+.wrapper ul li {
+  width: 75px;
+  height: 75px;
+  line-height: 75px;
+  margin: 0 10px;
+  text-align: center;
+  cursor: pointer;
+  border-radius: 50%;
+  border: var(--border-wrapper-skills);
+  transition: all 0.5s ease;
+  background-color: #f0f8ff;
 }
-/* Breakpoint formato tablet*/
-@media screen and (max-width: 768px) {
- 
-    .card-icon{
-      height: 90px;
-      width: 90px;
-      margin-left: 0%;
-      border-radius: 15px;
-      background-color: rgb(255, 255, 255);
-    }
+
+/* Style the icons by setting its color and margin-top value to 20px 
+to align it properly */
+.wrapper ul li img{
+  width:30px;
+  margin-bottom: 10px;
+  filter: var(--skills-filter-img);
+  opacity: var(--skills-opacity-img);
+  transition: .5s;
+  &:hover{
+      filter: grayscale(0%);
+      opacity: 1;
+      transition: all 0.5s ease;
+  }
 }
+
+/* Now target the specific li classes for styling and use box-shadow effect to border and text-shadow effect
+  to icons for glowing effect and use transition property for smooth transition effect. */
+/*facebook*/
+.wrapper ul li:hover.facebook {
+  border: 5px solid #3b5998;
+  box-shadow: 0 0 15px #3b5998;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover .fa-facebook {
+  color: #3b5998;
+  text-shadow: 0 0 15px #3b5998;
+  transition: all 0.5s ease;
+}
+
+/*twitter*/
+.wrapper ul li:hover.twitter {
+  border: 5px solid #00aced;
+  box-shadow: 0 0 15px #00aced;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover .fa-twitter {
+  color: #00aced;
+  text-shadow: 0 0 15px #00aced;
+  transition: all 0.5s ease;
+}
+
+/* instagram */
+.wrapper ul li:hover.instagram {
+  border: 5px solid #bc2a8d;
+  box-shadow: 0 0 15px #bc2a8d;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover .fa-instagram {
+  color: #bc2a8d;
+  text-shadow: 0 0 15px #bc2a8d;
+  transition: all 0.5s ease;
+}
+
+/* google */
+.wrapper ul li:hover.google {
+  border: 5px solid #dd4b39;
+  box-shadow: 0 0 15px #dd4b39;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover .fa-google {
+  color: #dd4b39;
+  text-shadow: 0 0 15px #dd4b39;
+  transition: all 0.5s ease;
+}
+
+/* whatsapp */
+.wrapper ul li:hover.whatsapp {
+  border: 5px solid #4dc247;
+  box-shadow: 0 0 15px #4dc247;
+  transition: all 0.5s ease;
+}
+
+.wrapper ul li:hover .fa-whatsapp {
+  color: #4dc247;
+  text-shadow: 0 0 15px #4dc247;
+  transition: all 0.5s ease;
+}
+
+
+/* media queries */
+
+@media screen and (max-width: 640px){
+  .wrapper {
+    width: 100%;
+  }
+  .wrapper ul li{
+      margin-top: 10px;
+  }
+}
+
+
+@media screen and (max-width: 340px){
+  .wrapper {
+    width: 150px;
+  }
+  .wrapper ul li{
+      margin:15px;
+  }
+}
+
+
+
+
+
