Responsive parragraphs, titles and imgs

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -23,6 +23,7 @@ $p-font-family: 'Poppins', sans-serif;
     --btn-kyber-color: #2d2d2d;
     --border-wrapper-skills: 5px solid #bfc0bf;
     --skills-opacity-img: 0.8;
+    --aboutme-bg-p: #fff8f0;
 
 }
 
@@ -46,5 +47,5 @@ $p-font-family: 'Poppins', sans-serif;
     --btn-kyber-color: #2d2d2d;
     --border-wrapper-skills: 5px solid #D8E2DC;
     --skills-opacity-img: 1;
-
+    --aboutme-bg-p: #0B2447;
 }
