--- a/src/styles/component/_projects.scss
+++ b/src/styles/component/_projects.scss
@@ -1,3 +1,10 @@
+.project-subtitle{
+  font-size: 18px;
+  line-height: 30px;
+  color: var(--p-font-color);
+  text-align: center;
+  margin: 4em 3em 5em 3em ;
+}
 .miniatura{
     border-radius: 30px;
   }
@@ -6,3 +13,47 @@
   }
 
 
+
+/* Breakpoint formato mac*/
+@media screen and (max-width: 995px) {
+  .project-subtitle{
+    margin: 4em 1em 5em 1em ;
+  }
+  .projects-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    vertical-align: middle;
+    justify-content: center;
+    padding: 0 5em;
+  }
+  .miniatura-pic{
+    max-width: 100%;
+  }
+}  
+/* Breakpoint formato tablet*/
+@media screen and (max-width: 768px) {
+  .project-subtitle{
+    font-size: 16px;   
+    margin: 4em 0 5em 0 ;
+  }
+  .projects-wrapper{
+      padding: 0 4em;
+  }
+}
+/* Breakpoint formato tablet*/
+@media screen and (max-width: 576px) {
+  .project-subtitle{
+    font-size: 14px;   
+    margin: 3em 1em 4em 1em ;
+  }
+  .projects-wrapper{
+      padding: 0 4em;
+  }
+}
+/* Breakpoint formato tablet*/
+@media screen and (max-width: 420px) {
+  .projects-wrapper{
+      padding: 0 3em;
+  }
+}
