--- a/src/styles/component/_walletfy.scss
+++ b/src/styles/component/_walletfy.scss
@@ -6,7 +6,6 @@
   color: #38b2e7;
   border-color: #38b2e7;
   text-decoration: none;
-  
 }
 .anuncio {
     background: #242828;
@@ -96,15 +95,54 @@
         font-size: 18px;
       }
       .titulo-home {
-        font-size: 35px;
+        font-size: 30px;
         line-height: 3rem;
         font-weight: 600;
         color: #38b2e7;
         margin-bottom: 1em;
       }    
       .titulo-tesis{
-        font-size: 35px;
+        font-size: 30px;
         font-weight: 600;
         color: #38b2e7;
       }
+      .wallet-li {
+          .li-walletfy-icons{
+          color: #0577a9;
+          font-size: 1.8rem;
+          }   
+      }
+}
+
+/* Breakpoint formato tablet*/
+@media screen and (max-width: 576px) {
+      .wallet-li-h3{
+      font-size: 18px;
+    }
+    .titulo-home {
+      font-size: 24px;
+      line-height: 3rem;
+      font-weight: 600;
+      color: #38b2e7;
+      margin-bottom: 1em;
+    }    
+    .titulo-tesis{
+      font-size: 24px;
+      font-weight: 600;
+      color: #38b2e7;
+    }
+    .wallet-li {
+      .li-walletfy-icons{
+      color: #0577a9;
+      font-size: 1.5rem;
+      }
+    }
+    .btn-app{
+      font-size: 14px;
+      margin: 1em 0;
+    }
+    .btn-landing{
+      font-size: 14px;
+      margin: 1em 0;
+    }
 }
