--- a/src/styles/base/_classes.scss
+++ b/src/styles/base/_classes.scss
@@ -34,4 +34,45 @@
         font-size: 16px;   
         margin: 1em 0;
     }
+    .project-tech-stack{
+        font-size: 18px;
+        font-weight: 600;
+    }
+    .project-funtionalities{
+        padding: 0 10px;
+        margin-bottom: 18px;
+        position: relative;
+        font-size: 16px;
+        color: var(--p-font-color); 
+    }
+}
+
+/* Breakpoint formato mobile*/
+@media screen and (max-width: 576px) {
+    .title-home{
+        font-size: 24px;  
+        margin: 3em 0 2em 0;
+    }
+    .project-description {    
+        font-size: 14px;   
+        margin: 1em 0;
+    }
+    .project-tech-stack{
+        font-size: 16px;
+        font-weight: 600;
+    }
+    .project-funtionalities{
+        padding: 0 10px;
+        margin-bottom: 18px;
+        position: relative;
+        font-size: 14px;
+        color: var(--p-font-color); 
+    }
+}
+/* Breakpoint formato mobile-xsm*/
+@media screen and (max-width: 430px) {
+    .title-home{
+        font-size: 22px;  
+        margin: 3em 0 2em 0;
+    }
 }
