--- a/src/styles/component/_bszStore.scss
+++ b/src/styles/component/_bszStore.scss
@@ -43,13 +43,15 @@
       border-radius: 10px;
       margin: 0px 10px ;
       background-color: rgb(255, 255, 255);
-    }
-  
+    } 
+    
   }
 
   /* Breakpoint formato tablet*/
 @media screen and (max-width: 768px) {  
-  
+  .titulo-bsz{
+    font-size: 30px;
+  }
   .sk-icon-bsz{
     height: 75px;
     width: 75px;
@@ -60,6 +62,25 @@
     border-radius: 10px;
     margin: 0px 10px ;
     background-color: rgb(255, 255, 255);
+  }
+  .bsz-li{
+      .li-bsz-icons{
+        font-size: 1.8rem;
+        color: var(--bsz-font-color-green);
+      }  
+  }
+  }
+
+ /* Breakpoint formato mobile*/
+ @media screen and (max-width: 576px) {  
+  .titulo-bsz{
+    font-size: 24px;
+  }
+  .bsz-li{
+      .li-bsz-icons{
+        font-size: 1.5rem;
+        color: var(--bsz-font-color-green);
+      }  
   }
   
   }
