--- a/src/styles/component/_pastillas.scss
+++ b/src/styles/component/_pastillas.scss
@@ -378,6 +378,11 @@
       margin-top: 10px;
   }
 }
+@media screen and (max-width: 576px){
+  .sub-pasti{
+    font-size: 20px;
+}
+}
 @media screen and (max-width: 340px){
   .wrapper {
     width: 150px;
